--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <input type="text" class="search-txt" placeholder="Pesquisar...">
                         <a href="#">
                             <form action="https://www.google.com.br/search" method="get">
-                                <button><img src="images/icons/Search.svg" alt="Lupa" width="20px" height="20px"></button>
+                                <button id="btn-lupa"><img src="images/icons/Search.svg" alt="Lupa" width="20px" height="20px"></button>
                             </form>
                         </a>
                 </div>
