--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="menu-navegacao" href="#destaques">DESTAQUES</a>
                     </div>
 
-                    <a class="nav-icons" href="login.html" target="_blank"><img src="images/icons/Person.svg" alt="Faça o seu login" width="25px" height="25px" title="Login"></a>
+                    <a id="btn-login" class="nav-icons" href="login.html" target="_blank"><img src="images/icons/Person.svg" alt="Faça o seu login" width="25px" height="25px" title="Login"></a>
                     <a class="nav-icons" href="#"><img src="images/icons/Fav.svg" alt="Seus itens favoritos" width="25px" height="25px" title="Favoritos"></a>
                     <a class="nav-icons" href="#"><img src="images/icons/ShoppingCart.svg" alt="Seu carrinho" width="25px" height="25px" title="Carrinho"></a>
                 </div>
